Fixed misaligned circle button icon

--- a/app/assets/stylesheets/site/buttons.css.scss
+++ b/app/assets/stylesheets/site/buttons.css.scss
@@ -37,6 +37,7 @@
     line-height: 56px;
 
     .fa {
+      top: 2px;
       font-size: 24px;
     }
   }
